crates/ts/tests/snapshots/baseline_migration__baseline_same_name_replacement_select.snap
---
source: crates/ts/tests/baseline_migration.rs
assertion_line: 136
expression: "diff(&old, &new)"
---
- symbol: SelectProps
  qualified_name: deprecated/components/Select/Select.d.ts.SelectProps
  kind: Interface
  change_type: "Removed(Symbol { kind: Interface })"
  is_breaking: true
  description: "Exported interface `SelectProps` was removed — migrate to `SelectProps`.\n  Matching props (use on `SelectProps` instead): children, className, direction, isOpen, isPlain, onSelect, onToggle, position, selections, toggleRef, variant, width, zIndex\n  Removed props with no direct equivalent: isCreatable, isDisabled, isGrouped\n  NOTE: Only address removed props that your code actually uses. If a removed prop is not referenced in the file, ignore it."
  before: "interface: SelectProps"
  after: ~
  has_migration_target: true
- symbol: variant
  qualified_name: components/Select/Select.d.ts.SelectProps.variant
  kind: Property
  change_type: "Added(Member { name: \"variant\", kind: Property })"
  is_breaking: true
  description: "property `variant` was added to `SelectProps`"
  before: ~
  after: "property: variant"
  has_migration_target: false
- symbol: focusTimeoutDelay
  qualified_name: components/Select/Select.d.ts.SelectProps.focusTimeoutDelay
  kind: Property
  change_type: "Added(Member { name: \"focusTimeoutDelay\", kind: Property })"
  is_breaking: true
  description: "property `focusTimeoutDelay` was added to `SelectProps`"
  before: ~
  after: "property: focusTimeoutDelay"
  has_migration_target: false
- symbol: onToggleKeydown
  qualified_name: components/Select/Select.d.ts.SelectProps.onToggleKeydown
  kind: Property
  change_type: "Added(Member { name: \"onToggleKeydown\", kind: Property })"
  is_breaking: true
  description: "property `onToggleKeydown` was added to `SelectProps`"
  before: ~
  after: "property: onToggleKeydown"
  has_migration_target: false
- symbol: shouldPreventScrollOnItemFocus
  qualified_name: components/Select/Select.d.ts.SelectProps.shouldPreventScrollOnItemFocus
  kind: Property
  change_type: "Added(Member { name: \"shouldPreventScrollOnItemFocus\", kind: Property })"
  is_breaking: true
  description: "property `shouldPreventScrollOnItemFocus` was added to `SelectProps`"
  before: ~
  after: "property: shouldPreventScrollOnItemFocus"
  has_migration_target: false
